# ms-tpm-20-ref

./: .appveyor.yml  .gitignore  .travis.yml  Makefile.am  README.md  bootstrap  configure.ac
TPMCmd/Platform/: platform.vcxproj
TPMCmd/Platform/include/prototypes/: Platform_fp.h
TPMCmd/Simulator/: simulator.vcxproj
TPMCmd/Simulator/include/: TpmTcpProtocol.h
TPMCmd/Simulator/include/prototypes/: Simulator_fp.h
TPMCmd/Simulator/src/: TPMCmdp.c  TPMCmds.c  TcpServer.c
TPMCmd/tpm/: Tpm.vcxproj
TPMCmd/tpm/include/: BaseTypes.h  CompilerDependencies.h  CryptRand.h  Implementation.h
TPMCmd/tpm/include/prototypes/: Simulator_fp.h
TPMCmd/tpm/src/crypt/: CryptEccData.c  CryptPrime.c  CryptRand.c
TPMCmd/tpm/src/crypt/ossl/: TpmToOsslMath.c
TPMCmd/tpm/src/support/: PropertyCap.c  TpmFail.c
m4/: flags.m4
